fix: css issue with overflow

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -65,6 +65,10 @@
   margin: 1%;
 }
 
+.margin-vertical {
+  margin: 1% 0;
+}
+
 .padding {
   padding: 1%;
 }
@@ -166,6 +170,7 @@ pre {
 .levels {
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   padding: 1%;
 }
 
